# mosaic-mcp

./: .gitignore  README.md  SECURITY.md  glama.json  pyproject.toml  server.json
src/mosaic_mcp/: __init__.py  _compat.py  auth.py  cache.py  responses.py  server.py  users.py
src/mosaic_mcp/db/: connection.py  queries.py
