[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mosaic-mcp"
version = "1.1.1"
description = "Pre-clinical drug discovery intelligence — 44 MCP tools for targets, compounds, patents, clinical trials, competitive landscapes, and whitespace analysis"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Mosaic Bio", email = "hello@mosaic.bio" },
]
keywords = [
    "mcp", "drug-discovery", "knowledge-graph", "pharma",
    "preclinical", "targets", "compounds", "clinical-trials",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "mcp[cli]>=1.0",
    "psycopg[binary]>=3.1",
    "pydantic>=2.5",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://getmosaic.dev"
Repository = "https://github.com/sourabhnk/mosaic-mcp"
Documentation = "https://getmosaic.dev"

[project.scripts]
mosaic-mcp = "mosaic_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mosaic_mcp"]
